--- a/ht/src/app/dashboard/dashboard.component.css
+++ b/ht/src/app/dashboard/dashboard.component.css
@@ -28,18 +28,22 @@
     width: 25%;
   }
   .module {
-    padding: 20px;
+    /* padding: 20px; */
     text-align: center;
     color: #eee;
-    max-height: 120px;
-    min-width: 120px;
-    background-color: #607D8B;
-    border-radius: 2px;
+    /* max-height: 120px;
+    min-width: 120px; */
+    /* width: 100%;
+    height: 100%; */
+    /* background-color: #607D8B; */
+    /* border-radius: 2px; */
+    overflow: hidden;
   }
-  .module:hover {
-    background-color: #EEE;
-    cursor: pointer;
-    color: #607d8b;
+  .image img{
+      height: 100%;
+      width: 100%;
+      display: block;
+      object-fit: cover;
   }
   .grid-pad {
     padding: 10px 0;
