--- a/ht/src/app/dashboard/dashboard.component.html
+++ b/ht/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,11 @@
-<h3>Top Heroes</h3>
+<h3>Top Images</h3>
 <div class="grid grid-pad">
-  <a *ngFor="let hero of heroes" class="col-1-4" routerLink="/detail/{{hero.id}}">
-    <div class="module hero">
-      <h4>{{hero.name}}</h4>
-    </div>
-  </a>
+  <div *ngFor="let image of images" class="col-1-4">
+    <a routerLink="/detail/{{image.id}}">
+      <div class="module image">
+        <img src={{image.path}}>
+        <!-- <h4>{{image.title}}</h4> -->
+      </div>
+    </a>
+  </div>
 </div>
