--- a/ht/src/app/dashboard/dashboard.component.html
+++ b/ht/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<app-file-upload></app-file-upload>
 <h3>Top Images</h3>
 <div class="grid grid-pad">
   <div *ngFor="let image of images" class="col-1-4">
