--- a/ht/src/app/register/register.component.html
+++ b/ht/src/app/register/register.component.html
@@ -1,14 +1,13 @@
-<div class="register">
-    {{diagnostic}}
-    <form>
-        <input type="text" for="firstname" [(ngModel)]="model.firstname" ng-mode name="firstName" placeholder="First name" required><br />
-        <input type="text" for="lastname" [(ngModel)]="model.lastname" name="lastName" placeholder="Last name" required><br />
-        <input type="email" for="email" [(ngModel)]="model.email" name="email" placeholder="Email" required><br />
-        <input type="text" for="username" [(ngModel)]="model.username" name="username" placeholder="Username" required><br />
-        <input type="password" for="password" [(ngModel)]="model.password" name="regPassword" placeholder="Password" required><br />
-        <input type="password" for="password" [(ngModel)]="model.password2" name="regPassword2" placeholder="Re-type password" required><br />
-        <input type="submit" value="Register">
-    </form>
-    
-    <p class="info"></p>
-</div>
+<form class="example-form">
+    <mat-form-field class="example-full-width">
+        <input matInput placeholder="Email" [formControl]="emailFormControl" [errorStateMatcher]="matcher">
+        <mat-hint>Errors appear instantly!</mat-hint>
+        <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+            Please enter a valid email address
+        </mat-error>
+        <mat-error *ngIf="emailFormControl.hasError('required')">
+            Email is <strong>required</strong>
+        </mat-error>
+    </mat-form-field>
+</form>
+
