--- a/ht/src/app/dashboard/dashboard.component.html
+++ b/ht/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<p *ngIf="this.userService.loggedInUser">Logged in as: {{currentUser}}</p>
 <app-file-upload></app-file-upload>
 <h3>Top Images</h3>
 <div class="grid grid-pad">
