--- a/ht/src/app/app.component.html
+++ b/ht/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <nav>
     <a routerLink="/dashboard">Dashboard</a>
-    <a routerLink="/images">Images</a>
+    <a routerLink="/login">Login</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
