--- a/ht/src/app/app.component.html
+++ b/ht/src/app/app.component.html
@@ -1,7 +1,4 @@
 <h1>{{title}}</h1>
-<nav>
-    <a routerLink="/dashboard">Dashboard</a>
-    <a routerLink="/login">Login</a>
-</nav>
+<app-main-nav></app-main-nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
