--- a/ht/src/app/image-detail/image-detail.component.html
+++ b/ht/src/app/image-detail/image-detail.component.html
@@ -3,7 +3,8 @@
   <div><span>id: </span>{{image.id}}</div>
   <div><span>title: </span>{{image.title}}</div>
   <div><span>ownerid: </span>{{image.owner.uid}}</div>
-  <div><span>ownername: </span>{{image.owner.username}}</div>
+  <div><span>ownername: </span><a routerLink="/profile/{{image.owner.uid}}">{{image.owner.username}}</a></div>
+  
   <img src={{image.path}}>
   <button (click)="goBack()">go back</button>
 </div>
