--- a/ht/src/app/profile-detail/profile-detail.component.html
+++ b/ht/src/app/profile-detail/profile-detail.component.html
@@ -2,4 +2,5 @@
 
   <div><span>id: </span>{{user.uid}}</div>
   <div><span>username: </span>{{user.username}}</div>
+  <div><span>role: </span>{{user.role}}</div>
 </div>
