--- a/ht/src/app/dashboard/dashboard.component.css
+++ b/ht/src/app/dashboard/dashboard.component.css
@@ -1,66 +1,71 @@
 /* DashboardComponent's private CSS styles */
 [class*='col-'] {
-    float: left;
-    padding-right: 20px;
-    padding-bottom: 20px;
+  float: left;
+  padding-right: 20px;
+  padding-bottom: 20px;
+}
+[class*='col-']:last-of-type {
+  padding-right: 0;
+}
+a {
+  text-decoration: none;
+}
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+h3 {
+  text-align: center; margin-bottom: 0;
+}
+h4 {
+  position: relative;
+}
+.grid {
+  margin: 0;
+}
+.col-1-4 {
+  width: 25%;
+}
+.module {
+  /* padding: 20px; */
+  text-align: center;
+  color: #eee;
+  /* max-height: 120px;
+  min-width: 120px; */
+  /* width: 100%;
+  height: 100%; */
+  /* background-color: #607D8B; */
+  /* border-radius: 2px; */
+  overflow: hidden;
+}
+.image img{
+    height: 100%;
+    width: 100%;
+    display: block;
+    object-fit: cover;
+}
+.grid-pad {
+  padding: 10px 0;
+}
+.grid-pad > [class*='col-']:last-of-type {
+  padding-right: 20px;
+}
+@media (max-width: 600px) {
+  .module {
+    font-size: 10px;
+    /* max-height: 75px; */
   }
-  [class*='col-']:last-of-type {
-    padding-right: 0;
+  
+  .col-1-4{
+    width: 95%;
   }
-  a {
-    text-decoration: none;
-  }
-  *, *:after, *:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-  h3 {
-    text-align: center; margin-bottom: 0;
-  }
-  h4 {
-    position: relative;
-  }
+}
+@media (max-width: 1024px) {
   .grid {
     margin: 0;
   }
-  .col-1-4 {
-    width: 25%;
-  }
   .module {
-    /* padding: 20px; */
-    text-align: center;
-    color: #eee;
-    /* max-height: 120px;
-    min-width: 120px; */
-    /* width: 100%;
-    height: 100%; */
-    /* background-color: #607D8B; */
-    /* border-radius: 2px; */
-    overflow: hidden;
+    min-width: 60px;
   }
-  .image img{
-      height: 100%;
-      width: 100%;
-      display: block;
-      object-fit: cover;
-  }
-  .grid-pad {
-    padding: 10px 0;
-  }
-  .grid-pad > [class*='col-']:last-of-type {
-    padding-right: 20px;
-  }
-  @media (max-width: 600px) {
-    .module {
-      font-size: 10px;
-      max-height: 75px; }
-  }
-  @media (max-width: 1024px) {
-    .grid {
-      margin: 0;
-    }
-    .module {
-      min-width: 60px;
-    }
-  }
+}
