--- a/ht/src/app/file-upload/file-upload.component.html
+++ b/ht/src/app/file-upload/file-upload.component.html
@@ -1,12 +1,13 @@
+<h2>Upload an image</h2>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <div class="form-group">
+  <div>
     <label for="name">Name</label>
-    <input type="text" class="form-control" id="name" placeholder="Bob" formControlName="name">
+    <input type="text" id="name" placeholder="Title" formControlName="name">
   </div>
-  <div class="form-group">
-    <label for="avatar">Avatar</label>
+  <div>
+    <label for="avatar">Image</label>
     <input type="file" id="avatar" (change)="onFileChange($event)" #fileInput>
-    <button type="button" class="btn btn-sm btn-default" (click)="clearFile()">clear file</button>
+    <button type="button" (click)="clearFile()">clear file</button>
   </div>
-  <button type="submit" [disabled]="form.invalid || loading" class="btn btn-success">Submit <i class="fa fa-spinner fa-spin fa-fw" *ngIf="loading"></i></button>
+  <button type="submit" [disabled]="form.invalid || loading">Submit</button>
 </form>
